# sentinel_trend

./: .gitignore  README.md  pyproject.toml
src/sentinel_trend/agents/: runner.py  tools.py
src/sentinel_trend/backtest/: costs.py  engine.py  metrics.py  reports.py
src/sentinel_trend/data/: calendar.py  qa.py  stooq.py
src/sentinel_trend/ops/: cli.py
src/sentinel_trend/research/: __init__.py  runner.py
src/sentinel_trend/strategy/: trend_sma.py
tests/: test_agents_runner.py  test_agents_tools.py  test_backtest_engine.py  test_data_stooq.py  test_research_runner.py  test_scaffold.py  test_trend_sma.py
