[project]
name = "sentinel-trend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
scripts = { sentinel-trend = "sentinel_trend.ops.cli:main" }
dependencies = [
    "numpy>=2.0.2",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
